tests/skipjob/cloudsql-auth-proxy/job.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: SKIPJob
metadata:
  name: random-job
spec:
  container:
    image: "perl:5.34.0"
    command:
      - "perl"
      - "-Mbignum=bpi"
      - "-wle"
      - "print bpi(2000)"
  cloudSql:
    enabled: true
    connectionName: test-project-bda1:europe-north1:pg-01-test
    serviceAccount: grafana@test-project-bda1.iam.gserviceaccount.com
