tests/skipjob/cloudsql-auth-proxy/cloudsql-but-not-enabled-assert.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: lazyconfig-job-skipjob
---
apiVersion: batch/v1
kind: Job
metadata:
  name: lazyconfig-job
  labels:
    app: lazyconfig-job-skipjob
    skiperator.kartverket.no/skipjob: "true"
    skiperator.kartverket.no/skipjobName: lazyconfig-job
spec:
  suspend: false
  backoffLimit: 6
  completionMode: NonIndexed
  parallelism: 1
  template:
    metadata:
      labels:
        job-name: lazyconfig-job
    spec:
      containers:
        - name: lazyconfig-job-skipjob
          image: "perl:5.34.0"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 150
            runAsUser: 150
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
      imagePullSecrets:
        - name: github-auth
      priorityClassName: skip-medium
      restartPolicy: Never
      securityContext:
        fsGroup: 150
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: lazyconfig-job-skipjob
