tests/skipjob/cloudsql-auth-proxy/job-assert.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: random-job-skipjob
---
apiVersion: batch/v1
kind: Job
metadata:
  name: random-job
  labels:
    app: random-job-skipjob
    skiperator.kartverket.no/skipjob: "true"
    skiperator.kartverket.no/skipjobName: random-job
spec:
  suspend: false
  backoffLimit: 6
  completionMode: NonIndexed
  parallelism: 1
  template:
    metadata:
      labels:
        job-name: random-job
    spec:
      containers:
        - name: random-job-skipjob
          image: "perl:5.34.0"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 150
            runAsUser: 150
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.0
          args:
            - "--auto-iam-authn"
            - "--structured-logs"
            - "--port=5432"
            - "test-project-bda1:europe-north1:pg-01-test"
          securityContext:
            runAsNonRoot: true
            privileged: false
            runAsUser: 200
            runAsGroup: 200
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: "RuntimeDefault"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
      imagePullSecrets:
        - name: github-auth
      priorityClassName: skip-medium
      restartPolicy: Never
      securityContext:
        fsGroup: 150
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: random-job-skipjob
